--- a/apps/baily.blog/src/pages/index.astro
+++ b/apps/baily.blog/src/pages/index.astro
@@ -1,8 +1,15 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
+import IndexHeader from "../components/IndexHeader.astro";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
+
+// Use Astro.glob() to fetch all posts, and then sort them by date.
+const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
+  (a, b) =>
+    new Date(b.frontmatter.pubDate).valueOf() -
+    new Date(a.frontmatter.pubDate).valueOf()
+);
 ---
 
 <!DOCTYPE html>
@@ -11,53 +18,67 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body>
-    <Header title={SITE_TITLE} />
+    <IndexHeader />
     <main>
-      <h1>🧑‍🚀 Hello, Astronaut!</h1>
-      <p>
-        Welcome to the official <a href="https://astro.build/">Astro</a> blog starter
-        template. This template serves as a lightweight, minimally-styled starting
-        point for anyone looking to build a personal website, blog, or portfolio
-        with Astro.
-      </p>
-      <p>
-        This template comes with a few integrations already configured in your
-        <code>astro.config.mjs</code> file. You can customize your setup with
-        <a href="https://astro.build/integrations">Astro Integrations</a> to add
-        tools like Tailwind, React, or Vue to your project.
-      </p>
-      <p>Here are a few ideas on how to get started with the template:</p>
-      <ul>
-        <li>Edit this page in <code>src/pages/index.astro</code></li>
-        <li>
-          Edit the site header items in <code>src/components/Header.astro</code>
-        </li>
-        <li>
-          Add your name to the footer in <code>src/components/Footer.astro</code
-          >
-        </li>
-        <li>
-          Check out the included blog posts in <code>src/pages/blog/</code>
-        </li>
-        <li>
-          Customize the blog post page layout in <code
-            >src/layouts/BlogPost.astro</code
-          >
-        </li>
-      </ul>
-      <p>
-        Have fun! If you get stuck, remember to <a
-          href="https://docs.astro.build/"
-          >read the docs
-        </a> or <a href="https://astro.build/chat">join us on Discord</a> to ask
-        questions.
-      </p>
-      <p>
-        Looking for a blog template with a bit more personality? Check out <a
-          href="https://github.com/Charca/astro-blog-template"
-          >astro-blog-template
-        </a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-      </p>
+      <section
+        style={{
+          display: "grid",
+          gap: "1em",
+          maxWidth: "100ch",
+          margin: "0 auto",
+          padding: "1em 2em",
+          gridTemplateColumns: "repeat(auto-fill, minmax(250px, 1fr))",
+        }}
+      >
+        {
+          posts.map((post) => (
+            <a
+              href={post.url}
+              style={{ textDecoration: "none", color: "inherit" }}
+            >
+              <article
+                style={{
+                  boxShadow:
+                    "8px 14px 38px rgb(39 44 49 / 8%), 1px 3px 8px rgb(39 44 49 / 5%)",
+                  minHeight: "150px",
+                  overflow: "hidden",
+                  display: "flex",
+                  flexDirection: "column",
+                  borderRadius: "10px",
+                }}
+              >
+                <img
+                  height={150}
+                  src="/placeholder-hero.jpg"
+                  alt={post.description}
+                  style={{ marginBottom: "1em", objectFit: "cover", margin: 0 }}
+                />
+                <div style={{ padding: "1em" }}>
+                  <h3 style={{ margin: 0, marginBottom: "5px" }}>
+                    {post.frontmatter.title}
+                  </h3>
+                  <time
+                    datetime={post.frontmatter.pubDate}
+                    style={{ color: "#738a94" }}
+                  >
+                    {new Date(post.frontmatter.pubDate).toLocaleDateString(
+                      "en-us",
+                      {
+                        year: "numeric",
+                        month: "short",
+                        day: "numeric",
+                      }
+                    )}
+                  </time>
+                  <p style={{ marginBottom: 0 }}>
+                    {post.frontmatter.description}
+                  </p>
+                </div>
+              </article>
+            </a>
+          ))
+        }
+      </section>
     </main>
     <Footer />
   </body>
